manifests/mlflow/mlflow.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mlflow
  name: mlflow
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: mlflow
  type: ClusterIP
status:
  loadBalancer: {}
