manifests/mlflow/mlflow.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/mlflow(/|$)(.*)"
        backend:
          service:
            name: mlflow
            port:
              number: 5000
